Fix spacing for freelancing page

--- a/_sass/pages.scss
+++ b/_sass/pages.scss
@@ -373,7 +373,7 @@
         right: 0%;
         top: -10%;
         @include media-breakpoint-up (md) {
-            left: -16%;
+            left: -6%;
             top: 0%;
         }
         @include media-breakpoint-up (lg) {
@@ -389,7 +389,7 @@
         right: 0%;
         top: -10%;
         @include media-breakpoint-up (md) {
-            right: -16%;
+            right: -6%;
             top: 0%;
         }
         @include media-breakpoint-up (lg) {
@@ -401,53 +401,117 @@
             top: 4%;
         }
     }
+    &--ian {
+        @include media-breakpoint-up (xl) {
+            left: 7%;
+            top: 4%;
+        }
+        @include media-breakpoint-only (md) {
+            left: -2%;
+            top: 8%;
+        }
+        @include media-breakpoint-down (sm) {
+            right: -4%;
+            top: -16%;
+        }
+    }
     &--dbc {
+        @include media-breakpoint-up (xl) {
+            top: -22%;
+        }
+        @include media-breakpoint-down (md) {
+            top: 7%;
+            right: -3%;
+        }
         @include media-breakpoint-down (sm) {
             top: -50%;
-            left: 0%;
+            left: 2%;
+        }
+        @include media-breakpoint-down (xs) {
+            top: -69%;
+            left: 2%;
         }
     }
     &--contact {
+        @include media-breakpoint-only (lg) {
+            top: 6%;
+            left: -10%;
+        }
         @include media-breakpoint-down (sm) {
             top: -25%;
             right: -4%;
         }
         @include media-breakpoint-down (xs) {
-            top: -33%;
-            right: -4%;
+            top: -36%;
+            right: 0%;
         }
     }
     &--planning {
+        @include media-breakpoint-up (xl) {
+            right: -6%;
+        }
+        @include media-breakpoint-down (md) {
+            right: -8%;
+            top: 5%;
+        }
         @include media-breakpoint-down (sm) {
             left: -6%;
             top: -32%;
         }
         @include media-breakpoint-down (xs) {
-            left: -6%;
-            top: -29%;
+            left: 0%;
+            top: -36%;
         }
     }
     &--general {
-        @include media-breakpoint-down (sm) {
+        @include media-breakpoint-up (sm) {
             top: -25%;
             right: -4%;
         }
+        @include media-breakpoint-up (md) {
+            left: -6%;
+            top: 5%;
+        }
+        @include media-breakpoint-up (lg) {
+            left: -7%;
+            top: 7%;
+        }
+        @include media-breakpoint-up (xl) {
+            left: -4%;
+            top: 4%;
+        }
         @include media-breakpoint-down (xs) {
-            top: -31%;
-            right: -5%;
+            top: -23%;
+            right: 0%;
         }
     }
     &--development {
+        @include media-breakpoint-up (xl) {
+            right: -2%;
+            top: 4%;
+        }
+        @include media-breakpoint-down (md) {
+            right: -6%;
+            top: 5%;
+        }
         @include media-breakpoint-down (sm) {
             top: -23%;
             left: -4%;
         }
         @include media-breakpoint-down (xs) {
             top: -27%;
-            left: -4%;
+            left: 0%;
         }
     }
     &--upwork {
+        @include media-breakpoint-up (xl) {
+            top: 4%;
+            left: -3%;
+        }
+        @include media-breakpoint-only (lg) {
+            top: 4%;
+            left: -6%;
+        }
         @include media-breakpoint-down (sm) {
             top: -22%;
             right: 0%;
@@ -462,7 +526,7 @@
     max-width: 400px;
     height: auto;
     &--ian {
-        @include media-breakpoint-down (sm) {
+        @include media-breakpoint-down (md) {
             max-width: 280px;
         }
         @include media-breakpoint-down (xs) {
@@ -471,6 +535,12 @@
     }
     &--dbc {
         height: 450px;
+        @include media-breakpoint-up (xl) {
+            max-width: 500px;
+        }
+        @include media-breakpoint-down (md) {
+            max-width: 300px;
+        }
         @include media-breakpoint-down (sm) {
             max-width: 320px;
             height: 300px;
@@ -481,39 +551,67 @@
         }
     }
     &--contact {
-        max-width: 490px;
+        max-width: 500px;
+        @include media-breakpoint-down (lg) {
+            max-width: 420px;
+        }
+        @include media-breakpoint-down (md) {
+            max-width: 300px;
+        }
         @include media-breakpoint-down (sm) {
             max-width: 320px;
             height: 300px;
         }
         @include media-breakpoint-down (xs) {
-            max-width: 280px;
+            max-width: 270px;
             height: 300px
         }
     }
     &--planning {
-        max-width: 490px;
+        max-width: 530px;
+        @include media-breakpoint-up (xl) {
+            max-width: 600px;
+        }
+        @include media-breakpoint-down (md) {
+            max-width: 370px;
+        }
         @include media-breakpoint-down (sm) {
             max-width: 380px;
             height: 350px;
         }
         @include media-breakpoint-down (xs) {
-            max-width: 280px;
+            max-width: 315px;
             height: 270px;
         }
     }
     &--general {
-        max-width: 490px;
-        @include media-breakpoint-down (sm) {
+        max-width: 510px;
+        @include media-breakpoint-up (sm) {
             max-width: 320px;
             height: 300px;
         }
+        @include media-breakpoint-up (md) {
+            max-width: 300px;
+        }
+        @include media-breakpoint-up (lg) {
+            max-width: 400px;
+        }
+        @include media-breakpoint-up (xl) {
+            max-width: 510px;
+            height: 400px;
+        }
         @include media-breakpoint-down (xs) {
-            max-width: 250px;
+            max-width: 260px;
         }
     }
     &--development {
-        max-width: 490px;
+        max-width: 515px;
+        @include media-breakpoint-down (lg) {
+            max-width: 420px;
+        }
+        @include media-breakpoint-down (md) {
+            max-width: 300px;
+        }
         @include media-breakpoint-down (sm) {
             max-width: 320px;
             height: 300px;
@@ -525,6 +623,12 @@
     }
     &--upwork {
         max-width: 490px;
+        @include media-breakpoint-down (lg) {
+            max-width: 400px;
+        }
+        @include media-breakpoint-down (md) {
+            max-width: 300px;
+        }
         @include media-breakpoint-down (sm) {
             max-width: 320px;
             height: 300px;
@@ -536,7 +640,12 @@
     }
     
 }
-
+.f-pl-sm-5 {
+    @include media-breakpoint-down (xs) {
+        padding-left: 3rem;
+    }
+    
+}
 
 // Code of Conduct page
 #coc-menu {
